tests/src/errors/localPlayer.spec.server.ts
const Players = game.GetService("Players");
const LocalPlayer = Players.LocalPlayer;
